--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/401-advanced-javascript-israaOthman/notes#readme",
   "dependencies": {
+    "@code-fellows/supergoose": "^1.0.2",
     "minimist": "^1.2.5",
     "mongoose": "^5.9.15"
   },
