--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "notes",
+  "name": "notesNew",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest --coverage --verbose --detectOpenHandles",
     "lint": "eslint '**/*.js'"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/401-advanced-javascript-israaOthman/notes.git"
+    "url": "git+https://github.com/401-advanced-javascript-israaOthman/notesNew.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/401-advanced-javascript-israaOthman/notes/issues"
+    "url": "https://github.com/401-advanced-javascript-israaOthman/notesNew/issues"
   },
-  "homepage": "https://github.com/401-advanced-javascript-israaOthman/notes#readme",
+  "homepage": "https://github.com/401-advanced-javascript-israaOthman/notesNew#readme",
   "dependencies": {
     "@code-fellows/supergoose": "^1.0.2",
     "minimist": "^1.2.5",
-    "mongoose": "^5.9.15"
+    "mongoose": "^5.9.16"
   },
   "devDependencies": {
-    "eslint": "^7.0.0",
-    "lint": "^0.7.0",
-    "jest": "^26.0.1"
+    "eslint": "^7.1.0",
+    "jest": "^26.0.1",
+    "lint": "^0.7.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
